[package]
name = "pulse"
version = "0.1.0"
authors = ["Matt Usifer <mattusifer@gmail.com>"]
edition = "2018"

[dependencies]
actix = "^0.7"

bincode = "^1.1"

chrono = "0.4"

clap = "^2.32"

failure = "^0.1"

futures = "^0.1"

lazy_static = "^1.3"

lettre-openssl111 = "^0.9"
lettre-openssl111_email = "^0.9"
mime = "^0.3"

pagecache = "^0.12"
sled = "^0.19"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

systemstat = "^0.1"

toml = "^0.4"
