[package]
name = "pulse"
version = "0.1.0"
authors = ["Matt Usifer <mattusifer@gmail.com>"]
edition = "2018"

[dependencies]
actix = "^0.8"
actix-web = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.32"
cron = "^0.6"
crossbeam = "^0.7"
diesel = { version = "^1.0", features = ["postgres"] }
dirs = "^1.0"
downcast-rs = "1.0.3"
failure = "^0.1"
futures = "^0.1"
lazy_static = "^1.3"
lettre = "^0.9"
lettre_email = "^0.9"
log = "^0.4"
nytrs = { git = "https://github.com/mattusifer/nytrs.git", tag = "0.1.0" }
# nytrs = { path = "../nytrs" }
mime = "^0.3"
pagecache = "^0.12"
pretty_env_logger="^0.3"
rand = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
systemstat = "^0.1"
toml = "^0.4"
